Packages error resolved

--- a/Pipfile
+++ b/Pipfile
@@ -13,7 +13,8 @@ alembic = "*"
 psycopg2 = "*"
 uvicorn = "*"
 python-dotenv = "*"
-databases = "*"
+databases = {extras = ["postgresql"], version = "*"}
+asyncpg = "*"
 
 [requires]
 python_version = "3.8"
